[gd_scene load_steps=4 format=3 uid="uid://boctoc2dkv5r3"]

[ext_resource type="Script" path="res://src/main/Scenes/Profiler/confirmation_window.gd" id="1_hqigb"]
[ext_resource type="Theme" uid="uid://dydy7bu3h07i7" path="res://src/main/resources/assets/themes/choose_profile_menu.tres" id="2_b0lnw"]
[ext_resource type="Script" path="res://src/main/Scenes/scaled_button.gd" id="3_uopy0"]

[node name="ConfirmationWindow" type="ColorRect"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.537255)
script = ExtResource("1_hqigb")

[node name="ConfirmationWindowContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="ConfirmationWindowContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationWindowContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.45

[node name="Control2" type="Control" parent="ConfirmationWindowContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="ConfirmationWindowContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.8
theme = ExtResource("2_b0lnw")

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationWindowContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationWindowContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ConfirmationWindowContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
text = "Are you sure want to delete the save?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationWindowContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_constants/separation = 30

[node name="ConfirmButton" type="Button" parent="ConfirmationWindowContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "Yes"
script = ExtResource("3_uopy0")

[node name="DeclineButton" type="Button" parent="ConfirmationWindowContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60
text = "No"
script = ExtResource("3_uopy0")

[node name="Control" type="Control" parent="ConfirmationWindowContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="ConfirmationWindowContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[connection signal="pressed" from="ConfirmationWindowContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ConfirmationWindowContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DeclineButton" to="." method="_on_decline_button_pressed"]
